Avance en Quimicos

--- a/index.html
+++ b/index.html
@@ -21,16 +21,12 @@
       <div class="prin">
         <nav class="cont">
 
-        <div style="float: left">
-          <button
-            class="btn-btn-primary m-5"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvas"
-            aria-controls="offcanvas"
-          >
-            Boton :)
-          </button>
+        <div style="float: left; margin: 0px;">
+
+          <input type="image" src="./img/mezul.png" alt="Menu" class="boton-imagen"             data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvas"
+          aria-controls="offcanvas">
+
 
           <!--offcanvas menu-->
           <div
@@ -45,28 +41,28 @@
 
 
                 <ul></ul>
-                <li class="nav"><a href="./mapa.html">Mapa de Calor</a></li>
+                <li class="nav"><a href="./mapac.html">Mapa de Calor</a></li>
                 <li class="nav"><a href="">Estado del Aire</a></li>
-                <li class="nav"><a href="">Estado del Clima</a></li>
-                <li class="nav"><a href="./quimicos.html">Consejos</a></li>
+                <li class="nav"><a href="./climate.html">Estado del Clima</a></li>
+                <li class="nav"><a href="./quimicos.html">Químicos</a></li>
             </div>
           </div>
 
           <!--offcanvas menu-->
         </div>
+
         <div class="nubogo" style="float:left;">
 
-            <img src="./img/nubogo.png" alt="Logo" />
-            <figcaption></figcaption>
+          <input type="image" src="./img/inverlogo.jpg" alt="Menu" style="width: 13rem; height: 7rem;" formaction="./index.html"   >
 
         </div>
 
         <div >
           <ul></ul>
-            <li class="nav"><a href="./mapa.html">Mapa de Calor</a></li>
+            <li class="nav"><a href="./mapac.html">Mapa de Calor</a></li>
             <li class="nav"><a href="">Estado del Aire</a></li>
-            <li class="nav"><a href="">Estado del Clima</a></li>
-            <li class="nav"><a href="./quimicos.html">Consejos</a></li>
+            <li class="nav"><a href="./climate.html">Estado del Clima</a></li>
+            <li class="nav"><a href="./quimicos.html">Químicos</a></li>
 
         </div>
 
