Pequeño arreglo en el index

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="prin">
         <nav class="cont">
 
-        <div style="float: left; margin: 0px;">
+        <div style="float: left; margin: 0px ;width: 7rem; height: 7rem;">
 
-          <input type="image" src="./img/mezul.png" alt="Menu" class="boton-imagen"             data-bs-toggle="offcanvas"
+          <input type="image" src="./img/mezul.png" alt="Menu" class="boton-imagen"           data-bs-toggle="offcanvas"
           data-bs-target="#offcanvas"
           aria-controls="offcanvas">
 
