Un poco de responsive index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/celindex.css">
+    <link rel="stylesheet" href="./css/tablindex.css" media="screen and (min-width:600px)">
+    <link rel="stylesheet" href="./css/index.css" media="screen and (min-width:800px)">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
 
@@ -53,11 +55,11 @@
 
         <div class="nubogo" style="float:left;">
 
-          <input type="image" src="./img/inverlogo.jpg" alt="Menu" style="width: 13rem; height: 7rem;" formaction="./index.html"   >
+          <input type="image" src="./img/inverlogo.jpg" alt="Menu" class="jogo" formaction="./index.html"   >
 
         </div>
 
-        <div >
+        <div class="linksus" >
           <ul></ul>
             <li class="nav"><a href="./mapac.html">Mapa de Calor</a></li>
             <li class="nav"><a href="">Estado del Aire</a></li>
